[package]
name = "serch_yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = {version = "0.3.60", features = ["Event", "InputEvent"]}
wasm-bindgen = "0.2.83"
gloo-net = "0.2.4"